Install TPM & tmux Resurrect so that I can restore tmux sessions over system reboots.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -109,3 +109,9 @@ set -g message-fg colour232
 set -g message-bg colour166
 
 # }
+
+# List of tmux plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/dotfiles/tmux/plugins/tpm/tpm'
